Closed
Bug 514007
Opened 16 years ago
Closed 16 years ago
titlebar pops over window when switching orientation on HTC touch pro
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
status1.9.2 | --- | beta1-fixed |
fennec | 1.0a3-wm+ | --- |
People
(Reporter: blassey, Assigned: blassey)
Details
(Keywords: mobile)
Attachments
(1 file)
841 bytes,
patch
|
dougt
:
review+
pavlov
:
approval1.9.2+
|
Details | Diff | Splinter Review |
No description provided.
![]() |
||
Comment 1•16 years ago
|
||
This is not happening on trunk or branch:
Mozilla/5.0 (Windows; U; WindowsCE 5.2; en-US; rv:1.9.2a2pre) Gecko/20090901 Fennec/1.0a3
and
Mozilla/5.0 (Windows; U; WindowsCE 5.2; en-US; rv:1.9.3a1pre) Gecko/20090901 Fennec/1.0a3
Comment 2•16 years ago
|
||
my current hypothesis is that the software input panel (SIP) is calling SHFullScreen(...show...). This races with the SHFullScreen we call. We do not control the SIP implementation -- it is part of the OEM's ROM.
Searching the interwebs, it sounds like it has been a problem. And the solution is, well, hacky. What people have been doing is firing a timer (SetTimer) and calling SHFullScreen() when the timer is handled. Yes, as I wrote this, I felt a bit of throw-up in the back of my throat.
This probably is specific to the HTC Touch Pro running the 6.1 stock rom. I have tried the 6.5 ROM on a similar device (ATT branded), and did not see this problem. I also tried to reproduce on the HTC Tytn II without any success.
So, maybe... maybe we can test to see what hardware we are on, and only setup this hackyass timer when we are on this busted device?
You can take a look at the "timer experience" here:
http://www.meer.net/~dougt/FullScreenTest.exe
Comment 3•16 years ago
|
||
* blassey might have cooked up something else after reading:
http://msdn.microsoft.com/en-us/library/aa458774.aspx
Assignee | ||
Comment 4•16 years ago
|
||
Assignee: nobody → bugmail
Attachment #398208 -
Flags: review?(doug.turner)
Attachment #398208 -
Flags: approval1.9.2?
Comment 5•16 years ago
|
||
Comment on attachment 398208 [details] [diff] [review]
patch
>+ switch (wParam) {
>+ case SETTINGCHANGE_RESET:
>+ {
>+ if (mWindowType == eWindowType_invisible) {
you probably could just change this switch into an if-statement which would probably be cleaner:
#ifdef WINCE_WINDOWS_MOBILE
if (wParam == SETTINGCHANGE_RESET &&
mWindowType == eWindowType_invisible)
...
I am more or less pissed off that we have to do this. could you reflect the reason for such a hack in a nice large comment that references this bug number?
With those two changes, R+
We should also ask roc/vlad if we can get rid of the invisible windows on winmo/fennec. Separate bugs.
Attachment #398208 -
Flags: review?(doug.turner) → review+
Assignee | ||
Comment 6•16 years ago
|
||
(In reply to comment #5)
> you probably could just change this switch into an if-statement which would
> probably be cleaner:
This patch was against 1.9.2, we already have a switch statement there on trunk so I left the switch statement in there.
pushed http://hg.mozilla.org/mozilla-central/rev/3959f7720be1
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Attachment #398208 -
Flags: approval1.9.2? → approval1.9.2+
Assignee | ||
Comment 7•16 years ago
|
||
status1.9.2:
--- → beta1-fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•