bug 514007 - titlebar pops over window when switching orientation on HTC touch pro r=dougt